force-app/main/default/objects/BSF_Workday_RealID_Config__c/BSF_Workday_RealID_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BSF Workday RealID Config</label>
</CustomObject>