force-app/main/default/objects/BSF_Workday_RealID_Config__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>batch size to be used in real id batch</description>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>