force-app/main/default/objects/BSF_Workday_RealID_Config__c/fields/Initial_Backfill_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Backfill_Date__c</fullName>
    <description>Date used by day1 of batch run</description>
    <label>Initial Backfill Date</label>
    <type>Date</type>
</CustomField>