force-app/main/default/objects/BSF_Workday_RealID_Config__c/fields/Last_Successful_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Run_Date__c</fullName>
    <description>Last successful run date of batch</description>
    <label>Last Successful Run Date</label>
    <type>Date</type>
</CustomField>